# parkflow

./: .gitignore  .windsurfrules  Diagram.md  Makefile  README.adoc  README.md  build.gradle.kts  docker-compose.yml  pyproject.toml  renovate.json  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: java-tests.yml  test-entry-service.yml  validate-and-test.yml  validate-infra.yml
buildSrc/src/main/kotlin/: Versions.kt
docker/duckdb/: Dockerfile  server.py
parkflow-common/: build.gradle.kts
parkflow-common/src/main/avro/: GateCommandEvent.avsc  ParkingStatusEvent.avsc  PaymentEvent.avsc  VehicleEntryEvent.avsc  VehicleExitEvent.avsc
parkflow-common/src/test/kotlin/io/gamov/parkflow/events/: ParkingStatusEventTest.kt  PaymentEventTest.kt  TestUtils.kt  VehicleEventTest.kt
parkflow-dashboard/: Dockerfile  README.adoc  pyproject.toml
parkflow-dashboard/src/parkflow_dashboard/: app.py  kafka_duckdb_connector.py
parkflow-dashboard/tests/: test_dashboard.py
parkflow-entry-exit/: README.adoc  build.gradle.kts
parkflow-entry-exit/src/main/kotlin/io/gamov/parkflow/datagen/: Main.kt
parkflow-entry-exit/src/main/kotlin/io/gamov/parkflow/entry/: Application.kt
parkflow-entry-exit/src/main/resources/: application-cloud.yaml  application-local.yaml  application.conf  application.yaml  logback.xml
parkflow_cli/: __init__.py  __main__.py  cli.py  pyproject.toml
parkflow_cli/src/parkflow_cli/: __init__.py  __main__.py  cli.py
scripts/: check-services.sh  parkflow.py  requirements.txt  set-profile.sh
(+7 files in other folders)
