[project]
name = "parkflow-dashboard"
version = "0.1.0"
description = "ParkFlow Dashboard for visualizing parking entry events"
requires-python = ">=3.11"
dependencies = [
    "dash",
    "plotly",
    "pandas",
    "requests",
    "confluent-kafka",
    "fastavro",
    "httpx",
    "cachetools",
    "duckdb>=0.9.2",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-dash>=2.1.2",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parkflow_dashboard"]

[tool.pytest.ini_options]
addopts = "--cov=parkflow_dashboard --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
asyncio_mode = "auto"
